k8s/apps/normal-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: normal-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: normal-app
  template:
    metadata:
      labels:
        app: normal-app
    spec:
      containers:
        - name: normal-app
          image: <ECR_IMAGE_URI>
          ports:
            - containerPort: 80
