k8s/apps/normal-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: normal-app
  namespace: default
spec:
  selector:
    app: normal-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
